--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -119,8 +119,8 @@
 		    <li><a data-toggle="tab" href="#menu5">Scatter Plots</a></li>
 		    <li><a data-toggle="tab" id="actortab" href="#menu6">Actor Graph</a></li>
 		    <li><a data-toggle="tab" href="#menu7">Choropleth</a></li>
-		    <li><a data-toggle="tab" href="#menu8">Time Bar</a></li>
-<!-- 		    <li><a data-toggle="tab" href="#menu9">SVM Model</a></li> -->
+<!-- 		    <li><a data-toggle="tab" href="#menu8">Time Bar</a></li>
+ --><!-- 		    <li><a data-toggle="tab" href="#menu9">SVM Model</a></li> -->
 		    <li><a data-toggle="tab" href="#menu10">Treemap</a></li>
 		  </ul>
 
@@ -382,10 +382,10 @@
 			  <script src="map.js"></script>
 		    </div>
 
-		    <div id="menu8" class="tab-pane fade">
+		    <!-- <div id="menu8" class="tab-pane fade">
 		      <h3>Time Bar Chart</h3>
 		      <p>Time Bar Chart</p>
-		    </div>
+		    </div> -->
 
 		   <!--  <div id="menu9" class="tab-pane fade">
 		      <h3>Menu 3</h3>
