remove time bar chart

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -138,8 +138,8 @@
 				<li>Description Scatter Plots</li>
 				<li>Actor Relationship Graph - How Much Value Does This Actor Add?</li>
 				<li>Choropleth Map - Movie Popularity by Country</li>
-				<li>Time Bar Chart</li>
-				<li>Treemap - Relative Popularity of Each Movie by Rating</li>
+<!-- 				<li>Time Bar Chart</li>
+ -->				<li>Treemap - Relative Popularity of Each Movie by Rating</li>
 				</ul>
 
 
